--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
 
   push:
 
-    # tags:
-    #   - v** # comment this to run on every push for debuggin purposes
+    tags:
+      - v** # comment this to run on every push for debuggin purposes
 
 jobs:
 
